--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -80,18 +80,19 @@
     <Compile Include="Assets\Scripts\Character\Enemy\NormalEnemy\Bat\Bat.cs" />
     <Compile Include="Assets\Scripts\Character\EnemyStates.cs" />
     <Compile Include="Assets\Scripts\Character\HPSlider.cs" />
+    <Compile Include="Assets\Scripts\Character\Player\Player.cs" />
     <Compile Include="Assets\Scripts\Character\Player\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\Character\Player\Taoist_priest.cs" />
     <Compile Include="Assets\Scripts\Character\Player\TestController.cs" />
     <Compile Include="Assets\Scripts\Data\BulletSO.cs" />
     <Compile Include="Assets\Scripts\Data\CharacterSO.cs" />
     <Compile Include="Assets\Scripts\Data\LevelSO.cs" />
     <Compile Include="Assets\Scripts\Data\ResourcepathSO.cs" />
     <Compile Include="Assets\Scripts\Manager\BulletManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\CameraManager.cs" />
     <Compile Include="Assets\Scripts\Manager\DataManager.cs" />
     <Compile Include="Assets\Scripts\Manager\GameManager.cs" />
     <Compile Include="Assets\Scripts\Manager\InputManager.cs" />
-    <Compile Include="Assets\Scripts\Manager\MapManager.cs" />
+    <Compile Include="Assets\Scripts\Manager\LevelManager.cs" />
     <Compile Include="Assets\Scripts\Manager\MonoManager.cs" />
     <Compile Include="Assets\Scripts\Manager\MusicManager.cs" />
     <Compile Include="Assets\Scripts\Manager\PoolManager.cs" />
