--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,16 +75,21 @@
     <Compile Include="Assets\Scripts\Base\BaseManager.cs" />
     <Compile Include="Assets\Scripts\Base\CharacterBase.cs" />
     <Compile Include="Assets\Scripts\Base\MonoController.cs" />
-    <Compile Include="Assets\Scripts\Bullet\AOE\Fanshaped.cs" />
     <Compile Include="Assets\Scripts\Bullet\BulletBase.cs" />
-    <Compile Include="Assets\Scripts\Bullet\EnemyAttack\GasBomb.cs" />
-    <Compile Include="Assets\Scripts\Bullet\EnemyAttack\LaserBullet.cs" />
-    <Compile Include="Assets\Scripts\Bullet\EnemyAttack\NormalBullet.cs" />
-    <Compile Include="Assets\Scripts\Bullet\EnemyAttack\PoisonousFloor.cs" />
+    <Compile Include="Assets\Scripts\Bullet\EnemyBullet\GasBomb.cs" />
+    <Compile Include="Assets\Scripts\Bullet\EnemyBullet\LaserBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\EnemyBullet\NormalBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\EnemyBullet\PoisonousFloor.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\BounceBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\Fanshaped.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\FireBall.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\FlowerDart.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\PerpetualBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\RotateBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\TaiChiDart.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\TrackingBullet.cs" />
     <Compile Include="Assets\Scripts\Bullet\Sword\AttackSword.cs" />
     <Compile Include="Assets\Scripts\Bullet\Sword\MoreSword.cs" />
-    <Compile Include="Assets\Scripts\Bullet\Sword\TaiChiDart.cs" />
-    <Compile Include="Assets\Scripts\Bullet\TrackingBullet\TrackingBullet.cs" />
     <Compile Include="Assets\Scripts\Canter\EnumCenter.cs" />
     <Compile Include="Assets\Scripts\Canter\EventCenter.cs" />
     <Compile Include="Assets\Scripts\Canter\StructCenter.cs" />
