--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Assets\Scripts\UI\Application\GameRoot.cs" />
     <Compile Include="Assets\Scripts\UI\Application\Panels\BoxPanel.cs" />
     <Compile Include="Assets\Scripts\UI\Application\Panels\CharacterPanel.cs" />
+    <Compile Include="Assets\Scripts\UI\Application\Panels\FailPanel.cs" />
     <Compile Include="Assets\Scripts\UI\Application\Panels\GamePanel.cs" />
     <Compile Include="Assets\Scripts\UI\Application\Panels\HandbookPanel.cs" />
     <Compile Include="Assets\Scripts\UI\Application\Panels\LevelPanel.cs" />
