--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.instantgame": "0.2.2",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
