选关界面逻辑完善，修复一点小bug

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Assets\Scripts\UI\EnemyPortraitList.cs" />
     <Compile Include="Assets\Scripts\UI\FileHelper\FileHelper.cs" />
     <Compile Include="Assets\Scripts\UI\IndependentUI\FloatDamage.cs" />
+    <Compile Include="Assets\Scripts\UI\LevelPortraitList.cs" />
     <Compile Include="Assets\Scripts\UI\PlayerPortraitList.cs" />
     <Compile Include="Assets\Scripts\UI\SkillPortraitList.cs" />
     <Compile Include="Assets\Scripts\UI\UIFrameWork\BasePanel.cs" />
