修改buff、角色受击事件以及部分弹幕发射逻辑，实现护盾、反射伤害技能，修改吸血技能

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Assets\Scripts\BUFF\Buff\BurnBuff.cs" />
     <Compile Include="Assets\Scripts\BUFF\Buff\ForstBuff.cs" />
     <Compile Include="Assets\Scripts\BUFF\Buff\PoisonBuff.cs" />
+    <Compile Include="Assets\Scripts\BUFF\Buff\ReflectBuff.cs" />
+    <Compile Include="Assets\Scripts\BUFF\Buff\ShieldBuff.cs" />
     <Compile Include="Assets\Scripts\BUFF\Buff\VampirismBuff.cs" />
     <Compile Include="Assets\Scripts\BUFF\BuffDoor\BuffDoor.cs" />
     <Compile Include="Assets\Scripts\Base\BaseManager.cs" />
