修复转阶段人物移动bug，修改子弹逻辑

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,21 +77,19 @@
     <Compile Include="Assets\Scripts\Base\BaseManager.cs" />
     <Compile Include="Assets\Scripts\Base\CharacterBase.cs" />
     <Compile Include="Assets\Scripts\Base\MonoController.cs" />
+    <Compile Include="Assets\Scripts\Bullet\BounceBullet.cs" />
     <Compile Include="Assets\Scripts\Bullet\BulletBase.cs" />
-    <Compile Include="Assets\Scripts\Bullet\EnemyBullet\GasBomb.cs" />
-    <Compile Include="Assets\Scripts\Bullet\EnemyBullet\LaserBullet.cs" />
-    <Compile Include="Assets\Scripts\Bullet\EnemyBullet\NormalBullet.cs" />
-    <Compile Include="Assets\Scripts\Bullet\EnemyBullet\PoisonousFloor.cs" />
-    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\BounceBullet.cs" />
-    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\Fanshaped.cs" />
-    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\FireBall.cs" />
-    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\FlowerDart.cs" />
-    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\PerpetualBullet.cs" />
-    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\RotateBullet.cs" />
-    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\TaiChiDart.cs" />
-    <Compile Include="Assets\Scripts\Bullet\PlayerBullet\TrackingBullet.cs" />
-    <Compile Include="Assets\Scripts\Bullet\Sword\AttackSword.cs" />
-    <Compile Include="Assets\Scripts\Bullet\Sword\MoreSword.cs" />
+    <Compile Include="Assets\Scripts\Bullet\Fanshaped.cs" />
+    <Compile Include="Assets\Scripts\Bullet\FireBall.cs" />
+    <Compile Include="Assets\Scripts\Bullet\FlowerDart.cs" />
+    <Compile Include="Assets\Scripts\Bullet\GasBomb.cs" />
+    <Compile Include="Assets\Scripts\Bullet\LaserBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\NormalBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PerpetualBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\PoisonousFloor.cs" />
+    <Compile Include="Assets\Scripts\Bullet\RotateBullet.cs" />
+    <Compile Include="Assets\Scripts\Bullet\TaiChiDart.cs" />
+    <Compile Include="Assets\Scripts\Bullet\TrackingBullet.cs" />
     <Compile Include="Assets\Scripts\Canter\EnumCenter.cs" />
     <Compile Include="Assets\Scripts\Canter\EventCenter.cs" />
     <Compile Include="Assets\Scripts\Canter\StructCenter.cs" />
